# eq-equiv

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
eq_equiv/: __init__.py  comparison.py  parser.py  sympy_generation.py
tests/: test_comparison.py  test_comparison_properties.py  test_domain_assumptions.py  test_orientation.py  test_parser.py  test_sympy_generation.py
